--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boardwalk Games</title>
+
+    <!--Google fonts import-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
+    <!--Font awesome link-->
+    <script src="https://kit.fontawesome.com/34a949671a.js" crossorigin="anonymous"></script>
+
+    <!--Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>    
+    <header>Header</header>
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Ipsum cupiditate vitae nisi adipisci animi reiciendis inventore reprehenderit deleniti, soluta odit! 
+            Aspernatur atque quam dicta provident quos similique eligendi, nobis laudantium?</p>
+    </main>
+    <footer>Footer</footer>
+
+    <!--Bootstrap JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
 </body>
 </html>
+
+
+
