--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header>Header</header>
+    <header><h1>Header</h1></header>
     <main>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Ipsum cupiditate vitae nisi adipisci animi reiciendis inventore reprehenderit deleniti, soluta odit! 
