Add CSS variables

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header><h1>Header</h1></header>
     <main>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        <p class="sub-heading-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Ipsum cupiditate vitae nisi adipisci animi reiciendis inventore reprehenderit deleniti, soluta odit! 
             Aspernatur atque quam dicta provident quos similique eligendi, nobis laudantium?</p>
     </main>
