--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <!--Navigation-->
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo-sm-white.png" alt="Boardwalk games logo" class="logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo-sm-white.png"
+                    alt="Boardwalk games logo" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -66,13 +67,52 @@
             <div class="col-12 col-xl-6 text-center text-xl-start">
                 <h1 class="display-3">Boardwalk Games</h1>
                 <p class="lead display-6 sub-heading-color">Your next adventure is waiting!</p>
-                <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! 
-                    Escape into the world of board games and café delights. 
-                    Whether you're a casual gamer seeking a cosy nook to unwind, 
-                    a board game enthusiast ready for your next challenge, or a student gamer looking for a fun, 
+                <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway!
+                    Escape into the world of board games and café delights.
+                    Whether you're a casual gamer seeking a cosy nook to unwind,
+                    a board game enthusiast ready for your next challenge, or a student gamer looking for a fun,
                     affordable hangout, we've got you covered.</p>
             </div>
-            <div class="col-12 col-xl-6">Carousel</div>
+            <div class="col-12 col-xl-6">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/images/boardwalk-games-carousel-image-1.webp" class="d-block w-100"
+                                alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/boardwalk-games-carousel-image-2.webp" class="d-block w-100"
+                                alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/boardwalk-games-carousel-image-3.webp" class="d-block w-100"
+                                alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/boardwalk-games-carousel-image-4.webp" class="d-block w-100"
+                                alt="The back-room at Boardwalk Games set up for a Dungeons and Dragons evening">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/boardwalk-games-carousel-image-5.webp" class="d-block w-100"
+                                alt="The back-room at Boardwalk Games set up for a Dungeons and Dragons evening">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/boardwalk-games-carousel-image-6.webp" class="d-block w-100"
+                                alt="The back-room at Boardwalk Games set up for a Dungeons and Dragons evening">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </header>
 
