--- a/game-library.html
+++ b/game-library.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,9 @@
     <!--Google fonts import-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
@@ -23,21 +26,84 @@
     <script src="https://kit.fontawesome.com/34a949671a.js" crossorigin="anonymous"></script>
 
     <!--Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <!--Class on body set to work with footer to force to the bottom-->
+
 <body class="d-flex flex-column min-vh-100">
     <!--Navigation-->
-    <div>Navigation</div>
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo-sm-white.png"
+                    alt="Boardwalk games logo" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link"  href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="game-library.html">Games</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!--Header with carousel-->
-    <header class="container">
+    <header id="header" class="container section">
         <div class="row">
-            <div class="col-12 col-xl-6">Game library intro text section</div>
-            <div class="col-12 col-xl-6">Carousel</div>
+            <div class="col-12 col-xl-6 text-center text-xl-start">
+                <h1 class="display-3">Game Library</h1>
+                <p class="lead display-6 sub-heading-color">Discover new games to rent or buy</p>
+                <p class="my-4">Dive into a world of adventure, strategy, and fun with our carefully curated collection
+                    of board games to rent or buy. From timeless classics to the latest sensations, our shelves are
+                    packed with games waiting to be discovered.</p>
+            </div>
+            <div class="col-12 col-xl-6">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/images/game-library-carousel-1.webp" class="d-block w-100"
+                                alt="Bookshelves filled with boardgames">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/game-library-carousel-2.webp" class="d-block w-100"
+                                alt="Bookshelves filled with boardgames">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/game-library-carousel-3.webp" class="d-block w-100"
+                                alt="Bookshelves filled with boardgames, one man is browsing the shelves">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/game-library-carousel-4.webp" class="d-block w-100"
+                                alt="8 board games stacked on top of each other">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -87,10 +153,9 @@
     </footer>
 
     <!--Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
-
-
-
