Add and style contact info

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="assets/images/services-1.webp" class="card-img-top"
-                            alt="Boardwalk games cafe table by a window, stacks of boardgames can be seen on the table" >
+                            alt="Boardwalk games cafe table by a window, stacks of boardgames can be seen on the table">
                         <div class="card-body">
                             <h3 class="card-title sub-heading-color">Play in our cafe</h3>
                             <p class="card-text">
@@ -179,7 +179,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="assets/images/services-4.webp" class="card-img-top"
-                            alt="A kids party being held at Boardwalk Games" >
+                            alt="A kids party being held at Boardwalk Games">
                         <div class="card-body">
                             <h3 class="card-title sub-heading-color">Kids parties</h3>
                             <p class="card-text">
@@ -199,14 +199,34 @@
 
     <!--Footer/contact-->
     <!--mt-auto forces footer to stay at the bottom of the page-->
-    <footer class="mt-auto">
-        <div class="container justify-content-center">
-            <div class="row">
-                <div class="col-12">
-                    Contact section heading
+    <footer id="contact" class="mt-auto">
+        <div class="container section">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Contact us!</h2>
                 </div>
                 <!--Contact info-->
-                <div class="col-12 col-md-6 col-xl-4">Contact info & social links</div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Contact info</h3>
+                    <address>
+                        <i class="fa-solid fa-location-dot"></i><strong> Boardwalk Games</strong><br>
+                        123 Boardwalk<br>
+                        Boardwalk, 12345<br>
+                    </address>
+                    <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
+                        <i class="fa-regular fa-paper-plane"></i>
+                        info@boardwalk-games.co</p>
+                        <div class="social-links mt-4">
+                            <a href="index.html" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+                            <a href="index.html" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="index.html" target="_blank" rel="noopener"
+                    aria-label="Visit our twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-twitter"></i></a>
+                        </div>
+                </div>
                 <!--Opening times-->
                 <div class="col-12 col-md-6 col-xl-4">Opening times</div>
             </div>
