--- a/game-library.html
+++ b/game-library.html
@@ -46,7 +46,7 @@
                         <a class="nav-link active" aria-current="page" href="game-library.html">Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -218,15 +218,70 @@
     </main>
 
     <!-- footer / contact section -->
-    <!-- mt-auto added to push footer to the bottom of the page -->
-    <footer class="mt-auto">
-        <div class="container">
+    <!--mt-auto forces footer to stay at the bottom of the page-->
+    <footer id="contact" class="mt-auto">
+        <div class="container section">
             <div class="row justify-content-center">
-                <div class="col-12">Contact section heading</div>
-                <!-- contact info -->
-                <div class="col-12 col-md-6 col-xl-4">Contact info & social links</div>
-                <!-- opening times -->
-                <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Contact us!</h2>
+                </div>
+                <!--Contact info-->
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Contact info</h3>
+                    <address>
+                        <i class="fa-solid fa-location-dot"></i><strong> Boardwalk Games</strong><br>
+                        123 Boardwalk<br>
+                        Boardwalk, 12345<br>
+                    </address>
+                    <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
+                        <i class="fa-regular fa-paper-plane"></i>
+                        info@boardwalk-games.co</p>
+                    <div class="social-links my-4">
+                        <a href="index.html" target="_blank" rel="noopener"
+                            aria-label="Visit our instagram page (opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="index.html" target="_blank" rel="noopener"
+                            aria-label="Visit our Facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-facebook"></i></a>
+                        <a href="index.html" target="_blank" rel="noopener"
+                            aria-label="Visit our twitter page (opens in a new tab)"><i
+                                class="fa-brands fa-twitter"></i></a>
+                    </div>
+                </div>
+                <!--Opening times-->
+                <div class="col-12 col-md-6 col-xl-4">
+                    <table class="table table-bordered table-dark">
+                        <thead>
+                            <tr>
+                                <th scope="col">Day</th>
+                                <th scope="col">Open</th>
+                                <th scope="col">Close</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Mon</th>
+                                <td>Closed</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Tues-Thurs</th>
+                                <td>11am</td>
+                                <td>11pm</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Fri-Sat</th>
+                                <td>11am</td>
+                                <td>12am</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Sun</th>
+                                <td>12pm</td>
+                                <td>7pm</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </footer>
