--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="game-library.html">Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -216,19 +216,52 @@
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
                         <i class="fa-regular fa-paper-plane"></i>
                         info@boardwalk-games.co</p>
-                        <div class="social-links mt-4">
-                            <a href="index.html" target="_blank" rel="noopener"
-                    aria-label="Visit our instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a>
-                            <a href="index.html" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="index.html" target="_blank" rel="noopener"
-                    aria-label="Visit our twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-twitter"></i></a>
-                        </div>
+                    <div class="social-links my-4">
+                        <a href="index.html" target="_blank" rel="noopener"
+                            aria-label="Visit our instagram page (opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="index.html" target="_blank" rel="noopener"
+                            aria-label="Visit our Facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-facebook"></i></a>
+                        <a href="index.html" target="_blank" rel="noopener"
+                            aria-label="Visit our twitter page (opens in a new tab)"><i
+                                class="fa-brands fa-twitter"></i></a>
+                    </div>
                 </div>
                 <!--Opening times-->
-                <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <table class="table table-bordered table-dark">
+                        <thead>
+                            <tr>
+                                <th scope="col">Day</th>
+                                <th scope="col">Open</th>
+                                <th scope="col">Close</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Mon</th>
+                                <td>Closed</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Tues-Thurs</th>
+                                <td>11am</td>
+                                <td>11pm</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Fri-Sat</th>
+                                <td>11am</td>
+                                <td>12am</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Sun</th>
+                                <td>12pm</td>
+                                <td>7pm</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </footer>
