--- a/game-library.html
+++ b/game-library.html
@@ -48,6 +48,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="booking.html" class="btn btn-primary ms-lg-3">Book Now!</a>
+                    </li>
                 </ul>
             </div>
         </div>
