--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="booking.html" class="btn btn-primary ms-lg-3">Book Now!</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -72,6 +75,9 @@
                     Whether you're a casual gamer seeking a cosy nook to unwind,
                     a board game enthusiast ready for your next challenge, or a student gamer looking for a fun,
                     affordable hangout, we've got you covered.</p>
+                    <li class="nav-item">
+                        <a href="booking.html" class="btn btn-primary mb-4">Book Now!</a>
+                    </li>
             </div>
             <div class="col-12 col-xl-6">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
