--- a/booking.html
+++ b/booking.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="booking.html" class="btn btn-primary ms-lg-3" aria-current="page">Book Now!</a>
+                        <a href="booking.html" class="btn custom-button-filled ms-lg-3" aria-current="page">Book Now!</a>
                     </li>
                 </ul>
             </div>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn custom-button-outline">Submit</button>
                 </form>
             </div>
         </div>
