--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="booking.html" class="btn btn-primary ms-lg-3">Book Now!</a>
+                        <a href="booking.html" class="btn custom-button-filled ms-lg-3 ">Book Now!</a>
                     </li>
                 </ul>
             </div>
@@ -76,7 +76,7 @@
                     a board game enthusiast ready for your next challenge, or a student gamer looking for a fun,
                     affordable hangout, we've got you covered.</p>
                     <li class="nav-item">
-                        <a href="booking.html" class="btn btn-primary mb-4">Book Now!</a>
+                        <a href="booking.html" class="btn custom-button-outline mb-4">Book Now!</a>
                     </li>
             </div>
             <div class="col-12 col-xl-6">
