--- a/game-library.html
+++ b/game-library.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="booking.html" class="btn btn-primary ms-lg-3">Book Now!</a>
+                        <a href="booking.html" class="btn custom-button-filled ms-lg-3">Book Now!</a>
                     </li>
                 </ul>
             </div>
